cmake_minimum_required(VERSION 3.17)
project(C_project)

set(CMAKE_CXX_STANDARD 11)

#add_executable(C_project stack_list.h stack.c)
#add_executable(C_project big_interger.c big_interger.h)
#add_executable(C_project Experiment05/BTree_in_class.cpp)
#add_executable(DataStructure_algorithm Experiment04/queue.cpp)
add_executable(DataStructure_algorithm Experiment05/BTree02.cpp)