cmake_minimum_required(VERSION 3.17)
project(C_project)

set(CMAKE_CXX_STANDARD 11)

#add_executable(C_project Experiment03/stack_list.h Experiment03/stack.c)
#add_executable(C_project big_interger.c big_interger.h)
#add_executable(C_project Experiment05/BTree_in_class.cpp)
add_executable(DataStructure_algorithm Experiment04/queue.cpp)
#add_executable(DataStructure_algorithm Experiment05/BTree02.cpp)
#add_executable(DataStructure_algorithm Experiment06/HuffmanT_linklist.cpp)
#add_executable(DataStructure_algorithm test.cpp)
#add_executable(DataStructure_algorithm Experiment06/final_huffmanT.cpp)
#add_executable(DataStructure_algorithm huff_test.cpp)
#add_executable(DataSturcture_algorithm hashmap/hash.h hashmap/hash_03.c)
#add_executable(DataStructure_algorithm graph.cpp)